<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.AddNewReminderActivity">


    <LinearLayout
            android:id="@+id/headers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:orientation="horizontal"
            android:weightSum="4.0">


        <TextView
                android:id="@+id/id_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/datetime"
                android:textSize="15dp"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/id_eat_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/themeal"
                android:textSize="15dp"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/id_cycleno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/totalbits"
                android:textSize="15dp"
                android:textStyle="bold"/>
        <TextView
                android:id="@+id/id_cycleinterval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/totaltime"
                android:textSize="15dp"
                android:textStyle="bold"/>


    </LinearLayout>
</RelativeLayout>