<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/colororange"
        android:orientation="horizontal">

<ImageView
        android:src="@drawable/tech_image"
        android:id="@+id/image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
            android:id="@+id/layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padd_10"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/image"
            app:layout_constraintTop_toTopOf="parent">


    <TextView
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/use_the_tech"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/cmtp_white"/>
        <TextView

                android:textSize="16sp"
                android:text="@string/measureon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/cmtp_white"/>
        <TextView
                android:id="@+id/id_next_reminder"

                android:textSize="16sp"
                android:text="@string/breath_fress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/cmtp_white"/>


    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/layout"
            app:layout_constraintTop_toTopOf="parent">


        <TextView

                android:layout_gravity="center_horizontal"
                android:padding="2dp"
                android:textColor="@color/cmtp_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_period_set"/>
        <TextView

                android:layout_gravity="center_horizontal"
                android:id="@+id/id_alarm_range"
                android:padding="2dp"
                android:textColor="@color/cmtp_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="18:30 - 19:30"/>
        <TextView
                android:id="@+id/edit_alaram"
                android:drawableRight="@drawable/edit"
                android:padding="2dp"
                android:textColor="@color/cmtp_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>