<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/colororange"
        android:orientation="horizontal">

    <ImageView
            android:id="@+id/image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/control_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
            android:id="@+id/layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padd_10"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/image"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eat_healthy"
                android:textColor="@color/cmtp_white"
                android:textSize="16sp" />

        <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optimal"
                android:textColor="@color/cmtp_white"
                android:textSize="16sp" />

        <TextView
                android:id="@+id/id_next_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/breath_fress"
                android:textColor="@color/cmtp_white"
                android:textSize="16sp" />


    </LinearLayout>


    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/layout"
            app:layout_constraintTop_toTopOf="parent">


        <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="2dp"
                android:text="@string/time_period_set"
                android:textColor="@color/cmtp_white" />

        <TextView

                android:id="@+id/id_alarm_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="2dp"
                android:text="18:30 - 19:30"
                android:textColor="@color/cmtp_white" />

        <TextView
                android:id="@+id/edit_alaram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/edit"
                android:padding="2dp"
                android:text="@string/edit"
                android:textColor="@color/cmtp_white" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>