<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/colororange"
        android:orientation="horizontal">


    <ImageView
            android:src="@drawable/sleep_image"
            android:id="@+id/image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
            android:id="@+id/layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padd_10"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/image"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goodnight_sleep"
                android:textColor="@color/cmtp_white"
                android:textSize="18sp"
                android:textStyle="bold" />

        <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/at_30_mins"
                android:textColor="@color/cmtp_white"
                android:textSize="16sp" />

        <TextView
                android:id="@+id/id_next_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/breath_fress"
                android:textColor="@color/cmtp_white"
                android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/layout"
            app:layout_constraintTop_toTopOf="parent">


        <TextView
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:text="@string/time_period_set"

                android:textAlignment="center"
                android:textColor="@color/cmtp_white" />

        <TextView

                android:id="@+id/id_alarm_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="22:30 - 06:30"

                android:textAlignment="center"
                android:textColor="@color/cmtp_white" />

        <TextView
                android:id="@+id/edit_alaram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/edit"

                android:text="@string/edit"
                android:textAlignment="center"
                android:textColor="@color/cmtp_white" />


    </LinearLayout>


    <!--    <LinearLayout-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:background="@drawable/rectangle_double"-->
    <!--            android:orientation="vertical"-->
    <!--            app:layout_constraintEnd_toStartOf="@+id/layout">-->


    <!--        <TextView-->

    <!--                android:layout_width="wrap_content"-->

    <!--                android:layout_height="wrap_content"-->

    <!--                android:text="@string/time_period_set"-->
    <!--                android:textColor="@color/cmtp_white" />-->

    <!--        <TextView-->

    <!--                android:id="@+id/id_alarm_range"-->
    <!--                android:layout_width="wrap_content"-->

    <!--                android:layout_height="wrap_content"-->

    <!--                android:text="22:30 - 06:30"-->
    <!--                android:textColor="@color/cmtp_white" />-->

    <!--        <TextView-->
    <!--                android:id="@+id/edit_alaram"-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--           -->
    <!--                android:drawableRight="@drawable/edit"-->
    <!--                android:text="@string/edit"-->
    <!--                android:textColor="@color/cmtp_white" />-->

    <!--    </LinearLayout>-->


</androidx.constraintlayout.widget.ConstraintLayout>